--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,4 +1,4 @@
-FROM ghcr.io/imagegenius/baseimage-alpine:3.17
+FROM ghcr.io/imagegenius/baseimage-alpine:arm64v8-3.17
 
 # set version label
 ARG BUILD_DATE
@@ -10,8 +10,7 @@ LABEL maintainer="hydazz"
 # environment settings
 ENV \
   JENKINS_HOME="/config" \
-  PLUGIN_CLI_VERSION="2.12.11" \
-  HOME="/config"
+  PLUGIN_CLI_VERSION="2.12.11"
 
 RUN \
   echo "**** install runtime packages ****" && \
