enforce jenkins builds latest weekly release

--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -2,24 +2,22 @@
 
 # jenkins variables
 project_name: docker-jenkins
-external_type: github_stable
+external_type: na
+custom_version_command: curl -sL https://api.github.com/repos/jenkinsci/jenkins/releases | jq -r '[.[] | select(.body | test("weekly releases", "i"))][0] | .tag_name'
 release_type: stable
 release_tag: latest
 ig_branch: main
 repo_vars:
-  - EXT_GIT_BRANCH = 'master'
-  - EXT_USER = 'jenkinsci'
-  - EXT_REPO = 'jenkins'
-  - BUILD_VERSION_ARG = 'JENKINS_VERSION'
-  - IG_USER = 'imagegenius'
-  - IG_REPO = 'docker-jenkins'
-  - CONTAINER_NAME = 'jenkins'
-  - DIST_IMAGE = 'alpine'
-  - MULTIARCH = 'true'
-  - CI = 'true'
-  - CI_WEB = 'true'
-  - CI_PORT = '8080'
-  - CI_SSL = 'false'
-  - CI_DOCKERENV = ''
-  - CI_AUTH = ''
-  - CI_WEBPATH = ''
+  - BUILD_VERSION_ARG='JENKINS_VERSION'
+  - IG_USER='imagegenius'
+  - IG_REPO='docker-jenkins'
+  - CONTAINER_NAME='jenkins'
+  - DIST_IMAGE='alpine'
+  - MULTIARCH='true'
+  - CI='true'
+  - CI_WEB='true'
+  - CI_PORT='8080'
+  - CI_SSL='false'
+  - CI_DOCKERENV=''
+  - CI_AUTH=''
+  - CI_WEBPATH=''
